feat: implement ogen
