# internal/api/openapi.yml
@@ -6670,142 +6670,3 @@ paths:
         schema:
           type: string
         example: '{{apiTokenInstance}}'
-  /:
-    post:
-      summary: Цитируемое сообщение
-      responses: {}
-      tags:
-        - Webhooks
-        - Входящее сообщение
-        - Цитирование текстовым сообщением
-      description: >-
-        Документация [Входящее текстовое
-        сообщение](https://green-api.com/v3/docs/api/receiving/notifications-format/incoming-message/TextMessage/)
-
-
-        Для получения данного типа уведомления необходимо включить настройку
-        "incomingWebhook": "yes" в личном кабинете или методом
-        [SetSettings](https://green-api.com/v3/docs/api/account/SetSettings/)
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                typeWebhook:
-                  type: string
-                instanceData:
-                  type: object
-                  properties:
-                    idInstance:
-                      type: integer
-                    wid:
-                      type: string
-                      format: email
-                    typeInstance:
-                      type: string
-                timestamp:
-                  type: integer
-                idMessage:
-                  type: string
-                  format: utc-millisec
-                senderData:
-                  type: object
-                  properties:
-                    chatId:
-                      type: string
-                      format: utc-millisec
-                    sender:
-                      type: string
-                      format: utc-millisec
-                    chatName:
-                      type: string
-                    senderName:
-                      type: string
-                    senderContactName:
-                      type: string
-                    senderPhoneNumber:
-                      type: integer
-                messageData:
-                  type: object
-                  properties:
-                    typeMessage:
-                      type: string
-                    extendedTextMessageData:
-                      type: object
-                      properties:
-                        text:
-                          type: string
-                        stanzaId:
-                          type: string
-                          format: utc-millisec
-                        participant:
-                          type: string
-                          format: utc-millisec
-                    quotedMessage:
-                      type: object
-                      properties:
-                        stanzaId:
-                          type: string
-                          format: utc-millisec
-                        participant:
-                          type: string
-                          format: utc-millisec
-                        typeMessage:
-                          type: string
-                        textMessage:
-                          type: string
-                        extendedTextMessage:
-                          type: object
-                          properties:
-                            typeMessage:
-                              type: string
-                            textMessage:
-                              type: string
-                            description:
-                              type: string
-                            title:
-                              type: string
-                            previewType:
-                              type: string
-                            jpegThumbnail:
-                              type: string
-                            forwardingScore:
-                              type: integer
-                            isForwarded:
-                              type: boolean
-            example:
-              typeWebhook: incomingMessageReceived
-              instanceData:
-                idInstance: 3100000000
-                wid: 79991234567@c.us
-                typeInstance: v3
-              timestamp: 1588091580
-              idMessage: '2755232962562'
-              senderData:
-                chatId: '10000000'
-                sender: '10000000'
-                chatName: Ходабрыш Пробешёлов
-                senderName: Ходабрыш Пробешёлов
-                senderContactName: Ходабрыш Пробешёлов
-                senderPhoneNumber: 79991112233
-              messageData:
-                typeMessage: quotedMessage
-                extendedTextMessageData:
-                  text: Текст сообщения, которое цитируют
-                  stanzaId: '115144403609924049'
-                  participant: '10000001'
-                quotedMessage:
-                  stanzaId: '115144403609924049'
-                  participant: '10000001'
-                  typeMessage: extendedTextMessage
-                  textMessage: Текст сообщения, которое процитировали
-                  extendedTextMessage:
-                    typeMessage: extendedTextMessage
-                    textMessage: Текст сообщения, которое процитировали
-                    description: ''
-                    title: ''
-                    previewType: None
-                    jpegThumbnail: ''
-                    forwardingScore: 0
-                    isForwarded: false
